# Hackathon-book

./: .env  .gitignore  GEMINI.md  docusaurus.config.js  package-lock.json  package.json  vercel.json
.docusaurus/: client-modules.js  docusaurus.config.mjs  registry.js  routes.js  routesChunkNames.json
.tmp/: feature_desc.txt
backend/: .env  README.md  all_methods_full.txt  ingest.py  main.py  pyproject.toml  requirements.txt  verify_data.py
backend/src/: main.py
backend/src/api/v1/: chat.py  schemas.py
backend/src/core/: settings.py
backend/src/services/: embedding_service.py  llm_service.py  local_ingest.py  postgres_service.py  qdrant_service.py
docs/: intro.md  sidebar.js
docs/module-1/: chapter-1-core-concepts.md  chapter-2-rclpy-control.md  chapter-3-urdf-fundamentals.md  chapter-4-joint-control-project.md
docs/module-2/: chapter-1-gazebo-physics.md  chapter-2-unity-digital-twin.md  chapter-3-sensor-simulation.md
docs/module-3-isaac/: chapter-1-isaac-sim-fundamentals.md  chapter-2-isaac-ros-vslam-perception.md  chapter-3-nav2-humanoid-planning.md  chapter-4-isaac-sim-ros-workflow.md
docs/module-4-vla/: chapter-1-voice-to-action.md  chapter-2-cognitive-planning.md  chapter-3-capstone-overview.md
qdrant_data/: meta.json
specs/001-rag-chatbot-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-ingestion-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-vision-language-action/: tasks.md
src/components/: Chatbot.js
tests/: test_main.py
(+46 files in other folders)
